# Chess-Engine

./: .gitignore  CMakeLists.txt  README.md  TODO.org
include/: board.hpp  utils.hpp
src/: bitboard.cpp  bitboard.hpp  board.cpp  debug.hpp  evaluate.hpp  gui_chess.cpp  load_fen.cpp  move_gen.cpp  move_gen.hpp  pawn_move_gen.cpp  perft.cpp  search.hpp  tests.cpp  zobrist.cpp  zobrist.hpp
